--- a/A-14/A-14.2.css
+++ b/A-14/A-14.2.css
@@ -1,79 +1,17 @@
-* {
-    margin: 0;
-    padding: 0;
+.borda {
+    border: 1px solid black;
+    font-size: 18px;
     font-family: Arial, Helvetica, sans-serif;
 }
-
-header {
-    background-color: rgb(0, 80, 172);
-    width: 100%;
-    height: 80px;
-    text-align: center;
-    line-height: 80px;
-    color: white;
+.cor1 {
+    color: blue;
 }
-
-h1 {
-    font-size: 45px;
-}
-
-footer {
-    background-color: rgb(0, 80, 172);
-    width: 100%;
-    height: 30px;
-    text-align: center;
-    line-height: 30px;
-    color: white;
-}
-
-
-.card {
-    width: 215px;
-    padding: 10px;
-    background-color: rgb(145, 215, 255);
-    text-align: center;
-    border-radius: 10px;
-    margin: 27px auto;
-    box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.55);
-}
-
-.card:hover {
-    box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.99);
-}
-
-.card img {
-    width: 215px;
-    border-radius: 7px;
-    margin-bottom: 10px;
-}
-
-.card p {
-    margin-bottom: 10px;
-}
-
-.cardTitulo {
+.resposta {
     font-weight: bold;
 }
-
-.card a {
-    font-weight: bold;
-    text-decoration: none;
-    color: rgb(0, 99, 156);
+.alternativa-certa {
+    color: green;
 }
-
-.card a:hover {
-    color:rgb(5, 40, 61)
-}
-
-main {
-    display: block;
-}
-
-.row {
-    display: flex;
-}
-
-footer {
-    position: absolute;
-    bottom: 0;
+.resposta-usuario {
+    color: red;
 }
