--- a/A-21/A-21.0.css
+++ b/A-21/A-21.0.css
@@ -15,3 +15,187 @@ body {
 #display0 {
     padding: 8px;
 }
+
+/* RELÓGIO 1 */
+
+#relogio1 {
+    display: flex;
+    border: 0px solid black;
+    background-color: rgb(240, 224, 237);
+    padding: 15px;
+    height: 50px;
+    width: 200px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-size: 30px;
+    font-weight: bold;
+    border-radius: 10px;
+    box-shadow: 2px 2px 30px rgba(95, 95, 95, 0.417);
+}
+
+#display1 {
+    background-color: rgb(240, 224, 237);
+    display: block;
+    padding: 5%;
+    border: 2px white;
+    width: auto;
+    height: auto;
+    border-radius: 10px;
+}
+
+/* RELÓGIO 2 */
+
+#relogio2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 1px solid black;
+    background-color: white;
+    padding: 15px;
+    width: 250px;
+    height: 100px;
+    border-radius: 10px; 
+}
+
+#display2 {
+    display: flex;
+    padding: 5px;
+    border: 2px solid rgb(221, 211, 219);
+    background-color: rgb(255, 246, 253);
+    border-radius: 10px;
+    margin: 0 5px;
+}
+
+
+#display-container {
+    display: flex;
+    align-items: center;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+h1 {
+    font-size: 15px;
+    margin: 0 auto;
+    border-radius: 5px;
+    font-weight: bold;
+}
+
+p {
+    font-size: 30px;
+    font-weight: bold;
+}
+
+#data-completa {
+    margin-bottom: 10px;
+}
+
+#horas, #minutos, #segundos {
+    font-size: 2em;
+}
+
+/* RELÓGIO 3 */
+
+#relogio3 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 1px solid black;
+    background-color: goldenrod;
+    padding: 15px;
+    width: 250px;
+    height: 100px;
+    border-radius: 10px; 
+}
+
+#display3 {
+    display: flex;
+    padding: 5px;
+    color: white;
+    background-color: black;
+    margin: 0 5px;
+    border-bottom: 5px solid white;
+}
+
+
+#display-container {
+    display: flex;
+    align-items: center;
+    font-size: 22px;
+    font-weight: bold;
+}
+
+h1 {
+    font-size: 15px;
+    margin: 0 auto;
+    border-radius: 5px;
+    font-weight: bold;
+}
+
+p {
+    font-size: 30px;
+    font-weight: bold;
+    color: gray;
+}
+
+#data-completa {
+    margin-bottom: 10px;
+}
+
+#horas, #minutos, #segundos {
+    font-size: 2em;
+}
+
+/* RELÓGIO 4 */
+
+#relogio4 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 5px solid black;
+    background-color: darkkhaki;
+    padding: 15px;
+    width: 250px;
+    height: 100px;
+    border-radius: 30px; 
+}
+
+#display4 {
+    display: flex;
+    padding: 5px;
+    color: white;
+    background-color: black;
+    margin: 0 5px;
+    border-bottom: 5px solid white;
+    border-bottom-left-radius: 30px;
+}
+
+
+#display-container {
+    display: flex;
+    align-items: center;
+    font-size: 22px;
+    font-weight: bold;
+}
+
+h1 {
+    font-size: 15px;
+    margin: 0 auto;
+    border-radius: 5px;
+    font-weight: bold;
+}
+
+p {
+    font-size: 30px;
+    font-weight: bold;
+    color: gray;
+}
+
+#data-completa {
+    margin-bottom: 10px;
+}
+
+#horas, #minutos, #segundos {
+    font-size: 2em;
+}
