--- a/A-14/A-14.0.css
+++ b/A-14/A-14.0.css
@@ -1,16 +1,22 @@
 body {
     border: 0;
     margin: 0px;
-    background-color: azure;
+    display: flex;
+    background-color: white;
+    justify-content: center;
+    align-items: center;
+    font-family: Arial, Helvetica, sans-serif;
+    background-image: url('../Imagens/fundo.jpg');
+    background-repeat: repeat;
 }
 
 hr {
-    border: 2px solid blue;
+    border: 1px solid darkcyan;
     max-width: 90vh;
 }
 
 .atividade h1 {
-    color: red;
+    color: darkgoldenrod;
     font-size: 22px;
 }
 
@@ -22,23 +28,25 @@ h1 {
 /* CONTAINER */
 .espaco {
     margin: 50px;
-    max-width: 120vh;
+    max-width: 100vh;
     align-items: center;
     justify-content: center;
-    margin-left: 35vh;
-    background-color: white;
 }
 
 .container {
-    padding: 10px;
+    padding: 5px;
     text-align: center;
     border: 4px solid black;
+    border-radius: 50px;
+    background-color: burlywood;
 }
 
 .container1 {
-    padding: 25px;
+    padding: 5px;
     border-right: 4px solid black;
     border-left: 4px solid black;
+    border-radius: 50px;
+    background-color: darkgray;
 }
 
 .atividade {
@@ -46,10 +54,12 @@ h1 {
     box-sizing: border-box;
     margin: 0 auto;
     border: 5px solid black;
+    border-radius: 50px;
     align-items: center;
     height: auto;
     max-width: 100vh;
     font-weight: bold;
+    background-color: beige;
 }
 
 .atividade h1,
@@ -58,6 +68,7 @@ h1 {
     font-family: Arial, Helvetica, sans-serif;
     margin-left: 6vh;
     max-width: 100%;
+    font-size: 15px;
 }
 
 .atividade a {
@@ -65,9 +76,9 @@ h1 {
     display: block;
     margin-left: 6vh;
     font-weight: bold;
-    font-size: 20px;
+    font-size: 15px;
     font-family: Arial, Helvetica, sans-serif;
-    margin-top: 3em;
+    margin-top: 1em;
 }
 
 footer {
@@ -81,4 +92,6 @@ footer {
     border-right: 4px solid black;
     border-left: 4px solid black;
     border-bottom: 4px solid black;
+    border-radius: 50px;
+    background-color: burlywood;
 }
